# Confidant-APP_Android

./: .gitignore  README.md  build.gradle  deployment_cert.der  gradle.properties  gradlew  private_key.pepk  router.jks  settings.gradle
app/: CMakeLists.txt  agconnect-services.json  build.gradle  google-services.json
app/libs/: MagicIndicator-1.5.0.aar  libsodium-jni-aar-2.0.1-SNAPSHOT.aar
app/libs/include/libsodium/include/: sodium.h
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: credentials.json  privacypolicy.html  termsofservice.html  tox.json
app/src/main/cpp/toxcore/: DHT.c  Messenger.c  Messenger.h  bootstrap.c  bootstrap.h  cJSON.c  cJSON.h  ccompat.h  crypto_core.c  crypto_core.h  group.c  group.h  network.c  ppTox.c  ppTox.h  tox.c  tox.h  tox_old.h  tox_old_code.h
app/src/main/cpp/toxencryptsave/: toxencryptsave.h
app/src/main/java/: test.java
app/src/main/res/anim/: anim_contact_list_close.xml  anim_contact_list_open.xml  bga_sbl_activity_swipeback_enter.xml  bga_sbl_activity_swipeback_exit.xml  file_select_in.xml  pop_manage_product_in.xml  pop_manage_product_out.xml  send_bbutton_out.xml  send_button_in.xml  swipe_back_exit_still.xml
app/src/main/res/animator/: anim_rotate.xml
app/src/main/res/color/: menu_item_selected_selector.xml  menu_item_selector.xml
app/src/main/res/drawable/: animation_loading_rotate.xml  badge_dot_layout.xml  bg_edittext.xml  bottom_navigation_selector.xml  btn_color_f2f2f2.xml  btn_d5d5d5.xml  btn_login_norouter.xml  btn_maincolor.xml  btn_maincolor2.xml  btn_maincolor3.xml  btn_maincolor5.xml  btn_maincolor6.xml  btn_verify_group.xml  btn_white.xml  btn_whitestroke.xml  checkbox_purple_style.xml  checkbox_style.xml  contact_chat_item_bg.xml  dash_line.xml  disk_normal_bg.xml  disk_notconfigured_bg.xml  ease_chat_image_selector.xml  ease_chat_localdocument_selector.xml  ease_chat_location_selector.xml  ease_chat_meeting_selector.xml  ease_chat_pirvatedocument_selector.xml  ease_chat_send_btn_selector.xml  ease_chat_shortvideo_selector.xml  ease_chat_takepic_selector.xml  ease_chat_videocall_selector.xml  ease_chatfrom_bg.xml  ease_chatto_bg.xml  ease_chatto_filebg.xml  ease_mm_listitem.xml  ease_recording_hint_bg.xml  ease_recording_text_hint_bg.xml  edittext_bg_selector.xml  email_radius_bg.xml  file_list_bg.xml  filedownload_bg.xml  (+36 more)
app/src/main/res/drawable-hdpi/: simple_splitter.xml
app/src/main/res/drawable-xxhdpi/: email_image_placeholder.xml
app/src/main/res/font/: vagroun_q.xml
app/src/main/res/layout/: activity_add_freind.xml  activity_adduser.xml  activity_adminlogin.xml  activity_adminqrcode.xml  activity_adminupcode.xml  activity_adminuppassword.xml  activity_base.xml  activity_chat.xml  activity_chat_email.xml  activity_chat_email_search.xml  activity_circlemember_detail.xml  activity_conversation.xml  activity_create_group.xml  activity_create_local_account.xml  activity_disk_configure.xml  activity_disk_information.xml  activity_disk_management.xml  activity_edit_nick_name.xml  activity_email_detail.xml  activity_email_file_attachment_show.xml  activity_email_select_attachment.xml  activity_encrption_local.xml  activity_file_detail_information.xml  activity_file_infos.xml  activity_file_manager.xml  activity_file_sendshare.xml  activity_file_share_set.xml  activity_file_task_list.xml  activity_fingerprint.xml  activity_first_node_sms_list.xml  activity_group_chats.xml  activity_group_info.xml  activity_group_members.xml  activity_guest.xml  activity_import_account.xml  activity_log.xml  activity_login.xml  activity_main.xml  activity_main_copy.xml  activity_main_menu.xml  (+199 more)
app/src/main/res/menu/: add_group_allmember.xml  add_group_member.xml  adduser.xml  choose_allfile.xml  choose_file.xml  clear_log.xml  confirm.xml  conversation_popup_menu.xml  create_group.xml  friendpopup_menu.xml  friendpopup_menu_file.xml  friendpopup_menu_pic_video.xml  menu_bottom_navigation.xml  next.xml  popup_menu.xml  popup_menu_file.xml  popup_menu_pic_video.xml  (+9 more)
(+1569 files in other folders)
